WebCore: Background color formatting lost on enter https://bugs.webkit.org/show_bug.cgi?id=20348

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-08-07
Reviewed by Justin Garcia.

This patch makes background color be preserved during editing.
In particular, editingStyleAtPosition would include the background color when obtaining styles.

* editing/ApplyStyleCommand.cpp:
(WebCore::): Added CSSPropertyBackgroundColor to editingStyleProperties

LayoutTests: Background color formatting lost on enter
https://bugs.webkit.org/show_bug.cgi?id=20348

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2009-08-07
Reviewed by Justin Garcia.

This patch adds a test to make sure WebKit preserves background color when inserting a new paragraph.

* editing/inserting/5994480-2-expected.txt: Because input element has explicit white background and the enclosing div has
transparent background, WebKit adds white background color in DeleteSelectionCommand::calculateTypingStyleAfterDelete upon deletion.
* editing/style/highlight-insert-paragraph-expected.txt: Added.
* editing/style/highlight-insert-paragraph.html: Added.
* platform/mac/editing/pasteboard/select-element-1-expected.txt: Because select element has explicit white background color
and div has transparent background, WebKit adds white background color in calculateTypingStyleAfterDelete upon cut.



Canonical link: https://commits.webkit.org/38611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47008 268f45cc-cd09-0410-ab3c-d52691b4dbfc